K1J-1851: Upgrade gradle (8.14.4) and 3pp to latest versions (spring boot 3.5.10 as base). Removed modules that are not used anymore. Migrate unit tests to junit 5. (#284)